# nostr-gadgets

./: .gitignore  README.md  _.test.js  dataloader.ts  defaults.ts  event.ts  gadgets_redstore_bg.wasm  global.ts  hints.ts  jsr.json  justfile  lists.ts  metadata.test.ts  metadata.ts  outbox.ts  package.json  purgatory.ts  relays.ts  replaceable-store.ts  sets.ts  store.ts  utils.ts  wot.ts
.github/workflows/: publish-assets.yml  release.yml
redstore/: Cargo.toml  _.multitab.test.ts  _.test.ts  esbuild.js  index.ts  justfile  redstore-worker.ts  vitest.config.ts  worker.ts
redstore/example/: app.ts  example.html  example.ts  index.html  vite.config.ts
redstore/src/: indexes.rs  lib.rs  query.rs  utils.rs
