[package]
name = "gadgets-redstore"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
redb = "3.1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-utils = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
sha2 = "0.10"
getrandom = { version = "0.3", features = ["wasm_js"] }
fastbloom = { version = "0.14.0", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "FileSystemSyncAccessHandle",
    "FileSystemReadWriteOptions",
    "FileSystemGetFileOptions",
    "FileSystemFileHandle",
    "FileSystemDirectoryHandle",
    "Window",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
    "StorageManager",
    "Navigator",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Url",
    "Performance",
]
